# da-caselaw-document-processing

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  renovate.json  run-tests.sh  template.yml
.github/workflows/: _reusable_ecr_deploy.yml  test.yml  (+6 more)
docs/: ci.md  terraform.md
document_cleanser_lambda/: .env.example  Dockerfile  clean_pdf.py  docx_visual_comparison.py  lambda_function.py  pyproject.toml  render_pdf.py  test-event.json  tools.py  utils.py
lambda_strip_docx/: Dockerfile  clean_docx.py  clean_jpeg.py  clean_pdf.py  clean_png.py  conftest.py  docker-compose.yml  docx_visual_comparison.py  exceptions.py  handler.py  lambda_function.py  pyproject.toml  render.py  render_pdf.py  requirements-dev.txt  requirements.txt  test_clean_docx.py  test_clean_pdf.py  test_handler.py  test_visual_regression.py  tools.py  utils.py
lambda_strip_docx/test_files/: sample_with_author.docx  sample_with_author_cleansed.docx
lambda_strip_docx/test_files/mydoc/: [Content_Types].xml
lambda_strip_docx/test_files/mydoc/docProps/: app.xml  core.xml
lambda_strip_docx/test_files/mydoc/word/: comments.xml  document.xml  settings.xml  styles.xml
lambda_strip_docx/test_files/mydoc/word/_rels/: document.xml.rels
lambda_strip_docx/tests/: test_clean_docx.py  test_clean_jpeg.py  test_clean_pdf.py  test_clean_png.py  test_handler.py  test_render_pdf.py
script/: server  test  upload
terraform/: backend.tf  build-and-deploy.sh  image.production.auto.tfvars  image.staging.auto.tfvars  main.tf  terraform.tfvars.example
(+6 files in other folders)
